# skipper

./: .gitmodules  Cargo.toml  README.md  build-minified.sh
.github/workflows/: rust.yml
src/: archive.rs  checksum.rs  config.rs  cpio.rs  http_reader.rs  json.rs  lib.rs  linux.rs  manifest.rs  payload.rs  test_server.rs  test_utils.rs  utils.rs
src/skip-build/: main.rs
test/archive/: manifest.json  test-img-larger.img  test.cpio  test.img
test/checksum/: checksums
test/config/: config.json  config.jsonc
test/cpio/: two-files.cpio
