[package]
name = "skipper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "skip-build"
path = "src/skip-build/main.rs"

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
once_cell = "1.8.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.7", features = ["blocking"] }
crc32fast = "1.3.0"

#test-only dependencies
rand = "0.8.4"

[profile.release]
opt-level = "z"
lto = true